--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <img src="media/logo.png" alt="Site logo">
+    </header>
     <div class="products">
     </div>
     <script src="scripts/script.js"></script>
