--- a/product.html
+++ b/product.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <a href="index.html"><img src="media/logo.png" alt="Site logo"></a>
+    </header>
     <main>
         <div class="flower">
 
