--- a/product.html
+++ b/product.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/media/site-icon.png">
 </head>
 <body>
     <header>
         <a href="index.html"><img src="media/logo.png" alt="Site logo"></a>
     </header>
     <main>
-        <div class="flower">
-
-        </div>
+        <a href="index.html"><button class="back">Go back</button></a>
+        <div class="flower spinner"></div>   
     </main>
+    <footer>
+        &copy; 2021
+    </footer>
     <script src="scripts/product.js"></script>
 </body>
 </html>
