--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products - Flower Power</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/media/site-icon.png">
 </head>
 <body>
     <header>
@@ -13,6 +14,9 @@
     </header>
     <div class="products">
     </div>
+    <footer>
+        &copy; 2021
+    </footer>
     <script src="scripts/script.js"></script>
 </body>
 </html>
